--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,5 +1,17 @@
 version: '3'
 services:
   app:
+    image: mischenkovn/devops-for-programmers-project-lvl1
     ports:
       - 8080:8080
+    environment:
+      - NODOS_HOST=0.0.0.0
+  caddy:
+    image: caddy:2.3.0-alpine
+    ports:
+      - 80:80
+      - 443:443
+    links:
+      - app
+    volumes:
+      - $PWD/services/caddy/Caddyfile:/etc/caddy/Caddyfile
