Revert "add debug"
This reverts commit 0f99619bb97cabc32b3127845d7c8169ae389281.

--- a/.github/workflows/push-prod.yml
+++ b/.github/workflows/push-prod.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Check
         run: |
           docker run -e NODOS_HOST=0.0.0.0 --rm --detach --name test-prod ${{ env.APP_IMAGE_NAME }}:cached \
-          && docker exec test-prod bash -c "hostname; ps ax; netstat -anp ; for i in {1..9}; do sleep 1; curl localhost:8080 && exit 0; done; exit 1"
+          && docker exec test-prod bash -c "for i in {1..9}; do sleep 1; curl localhost:8080 && exit 0; done; exit 1"
       - name: Push
         uses: docker/build-push-action@v2
         with:
