--- a/.github/workflows/push-prod.yml
+++ b/.github/workflows/push-prod.yml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Check
         run: |
-          docker run -e NODOS_HOST=0.0.0.0 --rm --detach --name test-prod ${{ env.APP_IMAGE_NAME }}:cached \
-          && docker exec test-prod bash -c "for i in {1..9}; do sleep 1; curl localhost:8080 && exit 0; done; exit 1"
+          make up \ 
+          && make test-web 
       - name: Push
         uses: docker/build-push-action@v2
         with:
