--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: mischenkovn/devops-for-programmers-project-lvl1
+    image: mischenkovn/devops-for-programmers-project-lvl1:cached
     ports:
       - 8080:8080
     environment:
@@ -11,7 +11,7 @@ services:
     ports:
       - 80:80
       - 443:443
-    links:
+    depends_on:
       - app
     volumes:
       - $PWD/services/caddy/Caddyfile:/etc/caddy/Caddyfile
