--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ version: '3'
 services:
   app:
     build: .
-    links:
+    depends_on:
       - db 
+    entrypoint: "./wait-for-it.sh db npm start"
   db:
     image: postgres:12.6-alpine
     restart: always
