--- a/.github/workflows/push-prod.yml
+++ b/.github/workflows/push-prod.yml
@@ -40,8 +40,10 @@ jobs:
 
       - name: Check
         run: |
-          make up \ 
-          && make test-web 
+          docker pull ${{ env.APP_IMAGE_NAME }}:cached \
+          && make up \
+          && docker-compose ps \
+          && make test-web
       - name: Push
         uses: docker/build-push-action@v2
         with:
