--- a/services/caddy/Caddyfile
+++ b/services/caddy/Caddyfile
@@ -1,14 +1,6 @@
-localhost {
-  log {
-    format single_field common_log
-  }
-
-  # Компрессия
-  encode zstd
-  # Самоподписной сертификат
-  tls internal
-
-  # Проксирование всех запросов в app:8080
-  # app – имя сервиса в docker-compose.yml
-  reverse_proxy /* app:8080
+:80 {
+    reverse_proxy app:8080 
+}
+localhost:443 {
+    reverse_proxy app:8080 
 }
